shimlang/test_scripts/errors/fn_call_bad_kwarg.stderr
Parse Error:
 1 | fn foo(a, b) {
 2 |     print(a);
 3 | }
 4 | 
 5 | foo(13+1="foo");
            ^^
Error: Unexpected syntax
Failed to parse script
